# pyproject.toml

[project]
dependencies = [
  "aiocache",
  "async-lru",
  "boto3",
  "dacite<1.9",
  "humanfriendly",
  "kubernetes",
  "motor==3.3.2",
  "pymongo==4.6.1",
  "pyyaml",
  "requests",
  "tenacity",
  "tornado",
  "typeguard",
  "wipac-dev-tools",
  "wipac-rest-tools",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "nest-asyncio",
  "flask",
]
prod-test = [
  "texttable",
]
